RESOLVED FIXED113612
Should never send events to plugins waiting on asynchronous initialization
https://bugs.webkit.org/show_bug.cgi?id=113612
Summary Should never send events to plugins waiting on asynchronous initialization
Brady Eidson
Reported 2013-03-29 14:47:27 PDT
Should never send events to plugins waiting on asynchronous initialization Doing so hangs the web process. In radar as <rdar://problem/13538945>
Attachments
Patch v1 (5.44 KB, patch)
2013-03-29 14:52 PDT, Brady Eidson
andersca: review+
Brady Eidson
Comment 1 2013-03-29 14:52:19 PDT
Created attachment 195805 [details] Patch v1
Brady Eidson
Comment 2 2013-03-29 14:55:19 PDT
Note You need to log in before you can comment on or make changes to this bug.