Should never send events to plugins waiting on asynchronous initialization. <rdar://problem/13538945> and https://bugs.webkit.org/show_bug.cgi?id=113612

Reviewed by Anders Carlsson.

Sending mouse and keyboard events to a plugin in the middle of asynchronous initialization is silly.

A quick audit of the sendSync() messages in PluginProxy suggests the following 8 can just have an early return:

* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::handleMouseEvent):
(WebKit::PluginProxy::handleWheelEvent):
(WebKit::PluginProxy::handleMouseEnterEvent):
(WebKit::PluginProxy::handleMouseLeaveEvent):
(WebKit::PluginProxy::handleKeyboardEvent):
(WebKit::PluginProxy::handleEditingCommand):
(WebKit::PluginProxy::isEditingCommandEnabled):
(WebKit::PluginProxy::handlesPageScaleFactor):

git-svn-id: svn://svn.chromium.org/blink/trunk@147253 bbb929c8-8fbe-4397-9dbb-9b2b20218538