third_party/WebKit/Source/WebKit2/WebProcess/Plugins/PluginProxy.cpp
@@ -355,6 +355,9 @@ void PluginProxy::manualStreamDidFail(bool wasCancelled)
 
 bool PluginProxy::handleMouseEvent(const WebMouseEvent& mouseEvent)
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool handled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::HandleMouseEvent(mouseEvent), Messages::PluginControllerProxy::HandleMouseEvent::Reply(handled), m_pluginInstanceID))
         return false;
@@ -364,6 +367,9 @@ bool PluginProxy::handleMouseEvent(const WebMouseEvent& mouseEvent)
 
 bool PluginProxy::handleWheelEvent(const WebWheelEvent& wheelEvent)
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool handled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::HandleWheelEvent(wheelEvent), Messages::PluginControllerProxy::HandleWheelEvent::Reply(handled), m_pluginInstanceID))
         return false;
@@ -373,6 +379,9 @@ bool PluginProxy::handleWheelEvent(const WebWheelEvent& wheelEvent)
 
 bool PluginProxy::handleMouseEnterEvent(const WebMouseEvent& mouseEnterEvent)
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool handled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::HandleMouseEnterEvent(mouseEnterEvent), Messages::PluginControllerProxy::HandleMouseEnterEvent::Reply(handled), m_pluginInstanceID))
         return false;
@@ -382,6 +391,9 @@ bool PluginProxy::handleMouseEnterEvent(const WebMouseEvent& mouseEnterEvent)
 
 bool PluginProxy::handleMouseLeaveEvent(const WebMouseEvent& mouseLeaveEvent)
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool handled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::HandleMouseLeaveEvent(mouseLeaveEvent), Messages::PluginControllerProxy::HandleMouseLeaveEvent::Reply(handled), m_pluginInstanceID))
         return false;
@@ -397,6 +409,9 @@ bool PluginProxy::handleContextMenuEvent(const WebMouseEvent&)
 
 bool PluginProxy::handleKeyboardEvent(const WebKeyboardEvent& keyboardEvent)
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool handled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::HandleKeyboardEvent(keyboardEvent), Messages::PluginControllerProxy::HandleKeyboardEvent::Reply(handled), m_pluginInstanceID))
         return false;
@@ -411,6 +426,9 @@ void PluginProxy::setFocus(bool hasFocus)
 
 bool PluginProxy::handleEditingCommand(const String& commandName, const String& argument)
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool handled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::HandleEditingCommand(commandName, argument), Messages::PluginControllerProxy::HandleEditingCommand::Reply(handled), m_pluginInstanceID))
         return false;
@@ -420,6 +438,9 @@ bool PluginProxy::handleEditingCommand(const String& commandName, const String& 
     
 bool PluginProxy::isEditingCommandEnabled(const String& commandName)
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool enabled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::IsEditingCommandEnabled(commandName), Messages::PluginControllerProxy::IsEditingCommandEnabled::Reply(enabled), m_pluginInstanceID))
         return false;
@@ -429,6 +450,9 @@ bool PluginProxy::isEditingCommandEnabled(const String& commandName)
     
 bool PluginProxy::handlesPageScaleFactor()
 {
+    if (m_waitingOnAsynchronousInitialization)
+        return false;
+
     bool handled = false;
     if (!m_connection->connection()->sendSync(Messages::PluginControllerProxy::HandlesPageScaleFactor(), Messages::PluginControllerProxy::HandlesPageScaleFactor::Reply(handled), m_pluginInstanceID))
         return false;
